--- a/_posts/2019-07-14-读书（穷查理宝典）.md
+++ b/_posts/2019-07-14-读书（穷查理宝典）.md
@@ -10,4 +10,6 @@ tags:								#标签
     - 成长
 ---
 ##  读书
-> 将Actor模型与对象模型区分开的一个因素是，Actor对象能够以动态代理方式更新本身的行为。与对象的状态实现代码相比，使用Scala语言和Akka框架更容易实现这种设计模式。通过使用ActorContext对象，Actor对象能够通过接收代码块从一种行为切换到另一种行为。 --《Reactive Messaging Patterns With the Actor Model》
+![穷查理宝典](http://ww3.sinaimg.cn/large/006tNc79ly1g4zniep4sjj30u0143dhe.jpg)
+
+> 获取普世的智慧，并相应地调整你的行为。
