--- a/_posts/2019-07-14-读书（穷查理宝典）.md
+++ b/_posts/2019-07-14-读书（穷查理宝典）.md
@@ -8,8 +8,9 @@ header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
 tags:								#标签
     - 成长
+    - 读书
 ---
-##  读书
+##  穷查理宝典
 ![穷查理宝典](http://ww3.sinaimg.cn/large/006tNc79ly1g4zniep4sjj30u0143dhe.jpg)
 
 > 获取普世的智慧，并相应地调整你的行为。
