--- a/_posts/2019-07-14-读书（穷查理宝典）.md
+++ b/_posts/2019-07-14-读书（穷查理宝典）.md
@@ -14,3 +14,35 @@ tags:								#标签
 ![穷查理宝典](http://ww3.sinaimg.cn/large/006tNc79ly1g4zniep4sjj30u0143dhe.jpg)
 
 > 获取普世的智慧，并相应地调整你的行为。
+
+
+1. 但若不停地做交易的话，就根本没有机会去真正研究一些长期的投资机会。
+2. 查理思考问题总是从逆向开始。如果要明白人生如何得到幸福，查理首先是研究人生如何才能变得痛苦；要研究企业如做强做大，查理首先研究企业是如何衰败的；大部分人更关心如何在股市投资成功，查理最关心的是为什么在股市投资上大部分人都失败了。他的这种思考问题方法来源于下面这句农夫谚语中所蕴含的哲理：我只想知道将来我会死在什么地方，这样我就不会去那了。
+3. 查理在他漫长的一生中，持续不断地收集关于各种各样的任务、各行各业的企业以及政府管治、学术研究等各领域中的人类失败之著名案例，并把那些失败的原因排列成正确决策的检查清单，使他在人生、事业的决策上几乎从不犯重大错误。
+4. 查理的头脑是原创的，从来不受热虐条条框框的束缚，也没有任何教条。他有儿童一样的好奇心，又有第一流的科学家所具备的研究素质和科学研究方法，一生都有强烈的求知欲和好奇心，几乎对所有的问题都感兴趣。任何一个问题在他看来都可以使用正确的方法通过自学完全掌握，可以在前人的基础上创新。
+5. 近代很多第一流的专家学者都能够在自己狭小的研究领域内做到相对客观，一旦离开自己的领域不远，就开始变得主观、教条、僵化，或者干脆就失去了自我学习的能力，所以大都免不了瞎子摸象的局限。
+6. 在他看来，世间宇宙万物的知识都是一个相互作用的整理，人类所有知识都是对这一整体研究的部分尝试，只有把这些知识结合起来，并贯穿在一个思想框架中，才能对正确的认知和决策起到帮助作用。所以他提倡要掌握在所有学科中真正重要的理论，并在此基础上形成所谓的“普世智慧”，并以此为利器去研究商业投资领域的重要问题。
+7. **这种思维方式将使你看到别人看不到的东西，预测到别人预测不到的未来，从而过上更幸福、自由和成功的生活。**
+8. 与芭菲特相比，查理的兴趣更为广泛。比如，他对科学和软科学几乎所有的领域都有强烈的兴趣和广泛的研究，通过融汇贯通，形成了原创的、独特的芒格思想体系。相对于任何来自象牙塔的思想体系，芒格主义完全为解决实际问题而生。比如说，据我所知，查理最早提出并系统研究人类心理倾在投资和商业决策中的巨大影响。十几年后的今天，行为金融学已经成为经济学中最热门的研究领域，行为经济学也获得了诺贝尔经济学的认可。
+9. 查理最受不了的就是因为拥有了钱财而失去与世界的联系，把自己隔绝在一个单间，占地一层的巨型办公室里，见面要层层通报，过五关斩六将，谁都不能轻易接触到。这样就与现实生活脱节了。
+10. **“我手里只要有一本书，就不会觉得浪费时间。”查理任何时候都随身携带一本书，即使坐在进经济舱的中间座位上，他只要拿着书，就安之若素。**
+11. 查理一生研究人类失败的原因，所以对人性的弱点有这深刻的理解。基于此，他认为人对自己要严格要求，一生不断提高修养，以克服人性本身的弱点。
+12. 有人说最好的方式是让自己配得上她/他，因为优秀的配偶都不是傻瓜。
+13. 查理是一个完全凭借智慧取得成功的人，这对与中国的读书人来讲无疑是一个令人振奋的例子。他的成功完全靠投资，而投资的成功有完全靠自我修养和学习，这与我在当今社会上看到的权钱交易、潜规则、商业欺诈、造假等毫无关系。作为一个正直善良的人、
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
